--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -31,6 +31,10 @@
                 <a href="#"><img src="../assets/carrito-de-compras.png" alt=""></a>
             </div>
         </div>
+
+        <div>
+            <img src="" alt="">
+        </div>
     </header>
 
     <main>
