--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -31,6 +31,9 @@
                 <a href="#"><img src="../assets/carrito-de-compras.png" alt=""></a>
             </div>
         </div>
+        <div>
+            <a href=""></a>
+        </div>
     </header>
 
     <main>
