--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -23,9 +23,9 @@
                                 <ul>
                                     <li><a href="">anillos</a></li>
                                     <li><a href="">pulseras</a></li>
-                                    <li><a href="">collares</a></li>
-                                    <li><a href="">cintos</a></li>
+                                    <li><a href="">relojes</a></li>
                                     <li><a href="">pañuelos</a></li>
+                                    <li><a href="">collares</a></li>
                                 </ul>
                             </li>
                             <li><a href="">COLOR</a>
@@ -35,7 +35,6 @@
                                     <li><a href="">green</a></li>
                                     <li><a href="">brown</a></li>
                                     <li><a href="">beige</a></li>
-                                    <li><a href="">Todos</a></li>
                                 </ul>
                             </li>
                         </ul>
