copia before BootStrap

--- a/index.html
+++ b/index.html
@@ -54,33 +54,49 @@
                 <h2>CARTERAS</h2>
             </div>
             <div class="productPic">
-                <div class="item1-carteras">
-                    <img src="./assets/olivia.png" alt="">
-                    <h4>OLIVIA</h4>
-                    <p>-$32.000-</p>
-                    <p2>$28.000</p>
-                    <a href="">comprar</a>
+                <div class="item1-prod">
+                    <div>
+                        <img src="./assets/olivia.png" alt="">
+                    </div>
+                    <div>
+                        <h4>OLIVIA</h4>
+                        <p>-$32.000-</p>
+                        <p2>$28.000</p>
+                        <a href="">comprar</a>
+                    </div>
                 </div>
-                <div class="item2-carteras">
-                    <img src="./assets/magenta.png" alt="">
-                    <h4>MAGENTA</h4>
-                    <p>-$32.000-</p>
-                    <p2>$28.000</p>
-                    <a href="">comprar</a>
+                <div class="item2-prod">
+                    <div>
+                        <img src="./assets/magenta.png" alt="">
+                    </div>
+                    <div>
+                        <h4>MAGENTA</h4>
+                        <p>-$32.000-</p>
+                        <p2>$28.000</p>
+                        <a href="">comprar</a>
+                    </div>
                 </div>
-                <div class="item3-carteras">
-                    <img src="./assets/gabriela.png" alt="">
-                    <h4>GABRIELA</h4>
-                    <p>-$32.000-</p>
-                    <p2>$28.000</p>
-                    <a href="">comprar</a>
+                <div class="item3-prod">
+                    <div>
+                        <img src="./assets/gabriela.png" alt="">
+                    </div>
+                    <div>
+                        <h4>GABRIELA</h4>
+                        <p>-$32.000-</p>
+                        <p2>$28.000</p>
+                        <a href="">comprar</a>
+                    </div>
                 </div>
-                <div class="item4-carteras">
-                    <img src="./assets/elena.png" alt="">
-                    <h4>ELENA</h4>
-                    <p>-$32.000-</p>
-                    <p2>$28.000</p>
-                    <a href="">comprar</a>
+                <div class="item4-prod">
+                    <div>
+                        <img src="./assets/elena.png" alt="">
+                    </div>
+                    <div>
+                        <h4>ELENA</h4>
+                        <p>-$32.000-</p>
+                        <p2>$28.000</p>
+                        <a href="">comprar</a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -121,34 +137,51 @@
         </section>
 
         <!-- SECCION 4 - Bloque Billeteras -->       
-        <section class="flex-productos">
+        <section class="flex-productos" >
             <div class="productPic">
-                <div>
-                    <img src="./assets/BTC.png" alt=""><h4>BTC</h4>
-                    <p>-$32.000-</p>
-                    <p2>$28.000</p>
-                    <a href="">comprar</a>
+                <div class="item1-prod">
+                    <div>
+                        <img src="./assets/BTC.png" alt=""><h4>BTC</h4>
+                    </div>
+                    <div>
+                        <h4>BTC</h4>
+                        <p>-$32.000-</p>
+                        <p2>$28.000</p>
+                        <a href="">comprar</a>
+                    </div>
                 </div>
-                <div>
-                    <img src="./assets/ETH.png" alt="">
-                    <h4>ETH</h4>
-                    <p>-$32.000-</p>
-                    <p2>$28.000</p>
-                    <a href="">comprar</a>
+                <div class="item2-prod">
+                    <div>
+                        <img src="./assets/ETH.png" alt="">
+                    </div>
+                    <div>
+                        <h4>ETH</h4>
+                        <p>-$32.000-</p>
+                        <p2>$28.000</p>
+                        <a href="">comprar</a>
+                    </div>
                 </div>
-                <div>
-                    <img src="./assets/BTC.png" alt="">
-                    <h4>BTC</h4>
-                    <p>-$32.000-</p>
-                    <p2>$28.000</p>
-                    <a href="">comprar</a>
+                <div class="item3-prod">
+                    <div>
+                        <img src="./assets/BTC.png" alt=""><h4>BTC</h4>
+                    </div>
+                    <div>
+                        <h4>BTC</h4>
+                        <p>-$32.000-</p>
+                        <p2>$28.000</p>
+                        <a href="">comprar</a>
+                    </div>
                 </div>
-                <div>
-                    <img src="./assets/ETH.png" alt="">
-                    <h4>ETH</h4>
-                    <p>-$32.000-</p>
-                    <p2>$28.000</p>
-                    <a href="">comprar</a>
+                <div class="item4-prod">
+                    <div>
+                        <img src="./assets/ETH.png" alt="">
+                    </div>
+                    <div>
+                        <h4>ETH</h4>
+                        <p>-$32.000-</p>
+                        <p2>$28.000</p>
+                        <a href="">comprar</a>
+                    </div>
                 </div>
             </div>
             <div class="cartelPic">
@@ -164,33 +197,49 @@
                 <h2>ACCESORIOS</h2>
             </div>
             <div class="productPic">
-                <div>
-                    <img src="./assets/belt.png" alt="">
-                    <h4>BELT</h4>
-                    <p>-$32.000-</p>
-                    <p2>$28.000</p>
-                    <a href="">comprar</a>
+                <div class="item1-prod">
+                    <div>
+                        <img src="./assets/belt.png" alt="">
+                    </div>
+                    <div>
+                        <h4>BELT</h4>
+                        <p>-$32.000-</p>
+                        <p2>$28.000</p>
+                        <a href="">comprar</a>
+                    </div>
                 </div>
-                <div>
-                    <img src="./assets/ring.png" alt="">
-                    <h4>RING</h4>
-                    <p>-$32.000-</p>
-                    <p2>$28.000</p>
-                    <a href="">comprar</a>
+                <div class="item2-prod">
+                    <div>
+                        <img src="./assets/ring.png" alt="">
+                    </div>
+                    <div>
+                        <h4>RING</h4>
+                        <p>-$32.000-</p>
+                        <p2>$28.000</p>
+                        <a href="">comprar</a>
+                    </div>
                 </div>
-                <div>
-                    <img src="./assets/belt.png" alt="">
-                    <h4>BELT</h4>
-                    <p>-$32.000-</p>
-                    <p2>$28.000</p>
-                    <a href="">comprar</a>
+                <div class="item3-prod">
+                    <div>
+                        <img src="./assets/belt.png" alt="">
+                    </div>
+                    <div>
+                        <h4>BELT</h4>
+                        <p>-$32.000-</p>
+                        <p2>$28.000</p>
+                        <a href="">comprar</a>
+                    </div>
                 </div>
-                <div>
-                    <img src="./assets/ring.png" alt="">
-                    <h4>RING</h4>
-                    <p>-$32.000-</p>
-                    <p2>$28.000</p>
-                    <a href="">comprar</a>
+                <div class="item4-prod">
+                    <div>
+                        <img src="./assets/ring.png" alt="">
+                    </div>
+                    <div>
+                        <h4>RING</h4>
+                        <p>-$32.000-</p>
+                        <p2>$28.000</p>
+                        <a href="">comprar</a>
+                    </div>
                 </div>
             </div>
         </section>
