--- a/pages/billeteras.html
+++ b/pages/billeteras.html
@@ -8,34 +8,144 @@
 </head>
 <body>
     <header>
-        <div class="login">
-            <a href="">login | sign up <img src="./assets/login.png" alt=""></a>
-        </div>
-        <div class="logoSerene">
+        <div>
             <a href="../index.html"><img src="../assets/Serene_index.png" alt=""></a>
         </div>
         <div>
             <nav>
                 <ul>
-                    <li><a href="bags.html">Bags</a></li>
+                    <li><a href="bags.html">Bags</a>
                     <li><a href="minibags.html">MiniBags</a></li>
                     <li><a href="#">Billeteras</a></li>
                     <li><a href="accesorios.html">Accesorios</a></li>
                 </ul>
             </nav>
         </div>
-        <div class="search">
-            <a href=""><img src="../assets/lupa.png" alt=""></a>
-            <a href=""><img src="../assets/heart.png" alt=""></a>
-            <a href="carrito.html"><img src="../assets/carrito-de-compras.png" alt=""></a>
+        <div>
+            <div>
+                <a href="">login | sign up <img src="./assets/login.png" alt=""></a>
+            </div>
+            <div>
+                <a href=""><img src="../assets/lupa.png" alt=""></a>
+                <a href=""><img src="../assets/heart.png" alt=""></a>
+                <a href="carrito.html"><img src="../assets/carrito-de-compras.png" alt=""></a>
+            </div>
         </div>
     </header>
 
     <main>
-        <p>billeteras</p>
-        
+        <div>
+            <div>
+                <div>
+                    <img src="../assets/olivia.png" alt="">
+                    <h4>OLIVIA</h4>
+                    <p>-$32.000-</p>
+                    <p2>$28.000</p>
+                    <button>-   1   +</button>
+                </div>
+                <div>
+                    <img src="../assets/magenta.png" alt="">
+                    <h4>MAGENTA</h4>
+                    <p>-$32.000-</p>
+                    <p2>$28.000</p>
+                    <button>-   1   +</button>
+                </div>
+                <div>
+                    <img src="../assets/gabriela.png" alt="">
+                    <h4>GABRIELA</h4>
+                    <p>-$32.000-</p>
+                    <p2>$28.000</p>
+                    <button>-   1   +</button>
+                </div>
+                <div>
+                    <img src="../assets/elena.png" alt="">
+                    <h4>ELENA</h4>
+                    <p>-$32.000-</p>
+                    <p2>$28.000</p>
+                    <button>-   1   +</button>
+                </div>
+                <div>
+                    <img src="../assets/olivia.png" alt="">
+                    <h4>OLIVIA</h4>
+                    <p>-$32.000-</p>
+                    <p2>$28.000</p>
+                    <button>-   1   +</button>
+                </div>
+                <div>
+                    <img src="../assets/magenta.png" alt="">
+                    <h4>MAGENTA</h4>
+                    <p>-$32.000-</p>
+                    <p2>$28.000</p>
+                    <button>-   1   +</button>
+                </div>
+                <div>
+                    <img src="../assets/gabriela.png" alt="">
+                    <h4>GABRIELA</h4>
+                    <p>-$32.000-</p>
+                    <p2>$28.000</p>
+                    <button>-   1   +</button>
+                </div>
+                <div>
+                    <img src="../assets/elena.png" alt="">
+                    <h4>ELENA</h4>
+                    <p>-$32.000-</p>
+                    <p2>$28.000</p>
+                    <button>-   1   +</button>
+                </div>
+                <div>
+                    <img src="../assets/olivia.png" alt="">
+                    <h4>OLIVIA</h4>
+                    <p>-$32.000-</p>
+                    <p2>$28.000</p>
+                    <button>-   1   +</button>
+                </div>
+                <div>
+                    <img src="../assets/magenta.png" alt="">
+                    <h4>MAGENTA</h4>
+                    <p>-$32.000-</p>
+                    <p2>$28.000</p>
+                    <button>-   1   +</button>
+                </div>
+                <div>
+                    <img src="../assets/gabriela.png" alt="">
+                    <h4>GABRIELA</h4>
+                    <p>-$32.000-</p>
+                    <p2>$28.000</p>
+                    <button>-   1   +</button>
+                </div>
+                <div>
+                    <img src="../assets/elena.png" alt="">
+                    <h4>ELENA</h4>
+                    <p>-$32.000-</p>
+                    <p2>$28.000</p>
+                    <button>-   1   +</button>
+                </div>
+            </div>
+        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <img src="../assets/ubi.png" alt="">
+            <p>37900 Candace Club</p>
+            <img src="../assets/email.png" alt="">
+            <p>Doreen31@gmail.com</p>
+        </div>
+        <div>
+            <div class="sobre-preg">
+                <h5><a href="sobrenosotros.html">SOBRE NOSOTROS</a></h5>
+                <h5><a href="preguntasfrecuentes.html">PREGUNTAS FRECUENTES</a></h5>
+            </div>
+            <div class="term-polit">
+                <a class="barra" href="terminos-y-condiciones.html">Términos y condiciones</a>
+                <a href="política-de-privacidad.html">Política de privacidad</a>
+            </div>
+        </div>
+        <div>
+            <a href="https://www.instagram.com/serene_bagss?igsh=MWR4djBwbDk4MjloYg==" target="_blank"><img src="../assets/IG.png" alt=""></a>
+            <a href="" target="_blank"><img src="../assets/FB.png" alt=""></a>
+            <a href="" target="_blank"><img src="../assets/WPP.png" alt=""></a>
+        </div>
+    </footer>
     <aside></aside>
 </body>
 </html>
