prueba antes de seguir con pseudo

--- a/pages/billeteras.html
+++ b/pages/billeteras.html
@@ -130,7 +130,7 @@
         </div>
     </main>
 
-    <footer class="container-fluid">
+    <footer class="container-fluid bg-warning">
         <div class="row">
             <div class="col">
                 <img src="../assets/ubi.png" alt="">
