hasta blanqueo headers y footer

--- a/pages/bags.html
+++ b/pages/bags.html
@@ -14,37 +14,20 @@
         <div class="item2-nav">
             <nav>
                 <ul>
-                    <li><a href="#">Bags</a>
-                        <ul>
-                            <li><a href="">CATEGORIA</a>
-                                <ul>
-                                    <li><a href="">daily</a></li>
-                                    <li><a href="">nightly</a></li>
-                                    <li><a href="">weekend</a></li>
-                                    <li><a href="">travel one's</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="">COLOR</a>
-                                <ul>
-                                    <li><a href="">black</a></li>
-                                    <li><a href="">white</a></li>
-                                    <li><a href="">green</a></li>
-                                    <li><a href="">brown</a></li>
-                                    <li><a href="">beige</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
+                    <li><a href="#">Bags</a></li>
                     <li><a href="minibags.html">MiniBags</a></li>
                     <li><a href="billeteras.html">Billeteras</a></li>
                     <li><a href="accesorios.html">Accesorios</a></li>
                 </ul>
             </nav>
         </div>
-        <div class="item3-log-search">
+        <div class="item3-login">
             <div class="login">
-                <a href="">login | sign up <img src="./assets/login.png" alt=""></a>
+                <a href="">login | sign up</a>
+                <a1 href=""><img src="../assets/login.png" alt=""></a>
             </div>
+        </div>
+        <div class="item4-search">
             <div class="carrito-search">
                 <a href=""><img src="../assets/lupa.png" alt=""></a>
                 <a href=""><img src="../assets/heart.png" alt=""></a>
@@ -151,7 +134,7 @@
             <img src="../assets/email.png" alt="">
             <p>Doreen31@gmail.com</p>
         </div>
-        <div class="item2-sobre-pregfr">
+        <div class="item2">
             <div class="sobre-preg">
                 <h5><a href="sobrenosotros.html">SOBRE NOSOTROS</a></h5>
                 <h5><a href="preguntasfrecuentes.html">PREGUNTAS FRECUENTES</a></h5>
