--- a/pages/preguntasfrecuentes.html
+++ b/pages/preguntasfrecuentes.html
@@ -21,10 +21,13 @@
                 </ul>
             </nav>
         </div>
-        <div class="item3-log-search">
+        <div class="item3-login">
             <div class="login">
-                <a href="">login | sign up <img src="./assets/login.png" alt=""></a>
+                <a href="">login | sign up</a>
+                <a1 href=""><img src="../assets/login.png" alt=""></a>
             </div>
+        </div>
+        <div class="item4-search">
             <div class="carrito-search">
                 <a href=""><img src="../assets/lupa.png" alt=""></a>
                 <a href=""><img src="../assets/heart.png" alt=""></a>
@@ -88,7 +91,7 @@
             <img src="../assets/email.png" alt="">
             <p>Doreen31@gmail.com</p>
         </div>
-        <div class="item2-sobre-pregfr">
+        <div class="item2">
             <div class="sobre-preg">
                 <h5><a href="sobrenosotros.html">SOBRE NOSOTROS</a></h5>
                 <h5><a href="preguntasfrecuentes.html">PREGUNTAS FRECUENTES</a></h5>
