--- a/pages/últimoslanzamientos.html
+++ b/pages/últimoslanzamientos.html
@@ -8,13 +8,10 @@
 </head>
 <body>
     <header>
-        <div class="login">
-            <a href="">login | sign up <img src="./assets/login.png" alt=""></a>
-        </div>
-        <div class="logoSerene">
+        <div class="item1-logoserene">
             <a href="../index.html"><img src="../assets/Serene_index.png" alt=""></a>
         </div>
-        <div>
+        <div class="item2-nav">
             <nav>
                 <ul>
                     <li><a href="bags.html">Bags</a></li>
@@ -24,10 +21,18 @@
                 </ul>
             </nav>
         </div>
-        <div class="search">
-            <a href=""><img src="../assets/lupa.png" alt=""></a>
-            <a href=""><img src="../assets/heart.png" alt=""></a>
-            <a href="carrito.html"><img src="../assets/carrito-de-compras.png" alt=""></a>
+        <div class="item3-login">
+            <div class="login">
+                <a href="">login | sign up</a>
+                <a1 href=""><img src="../assets/login.png" alt=""></a>
+            </div>
+        </div>
+        <div class="item4-search">
+            <div class="carrito-search">
+                <a href=""><img src="../assets/lupa.png" alt=""></a>
+                <a href=""><img src="../assets/heart.png" alt=""></a>
+                <a href="carrito.html"><img src="../assets/carrito-de-compras.png" alt=""></a>
+            </div>
         </div>
     </header>
 
@@ -35,7 +40,29 @@
         <p>últimos lanzamientos</p>
         
     </main>
-    <footer></footer>
+    <footer class="footer-flex">
+        <div class="item1-ubi-mail">
+            <img src="../assets/ubi.png" alt="">
+            <p>37900 Candace Club</p>
+            <img src="../assets/email.png" alt="">
+            <p>Doreen31@gmail.com</p>
+        </div>
+        <div class="item2">
+            <div class="sobre-preg">
+                <h5><a href="sobrenosotros.html">SOBRE NOSOTROS</a></h5>
+                <h5><a href="preguntasfrecuentes.html">PREGUNTAS FRECUENTES</a></h5>
+            </div>
+            <div class="term-polit">
+                <a class="barra" href="terminos-y-condiciones.html">Términos y condiciones</a>
+                <a href="política-de-privacidad.html">Política de privacidad</a>
+            </div>
+        </div>
+        <div class="item3-redes-sociales">
+            <a href="https://www.instagram.com/serene_bagss?igsh=MWR4djBwbDk4MjloYg==" target="_blank"><img src="../assets/IG.png" alt=""></a>
+            <a href="" target="_blank"><img src="../assets/FB.png" alt=""></a>
+            <a href="" target="_blank"><img src="../assets/WPP.png" alt=""></a>
+        </div>
+    </footer>
     <aside></aside>
     
 </body>
