para 2da entrega

--- a/pages/billeteras.html
+++ b/pages/billeteras.html
@@ -9,10 +9,10 @@
 <body>
     <header class="container-fluid bg-warning">
         <div class="row">
-            <div class="col-sd-12 col-md-5 col-lg-5">
+            <div class="col-sd-12 col-md-5 col-lg-5 order-2">
                 <a href="../index.html"><img src="../assets/Serene_index.png" alt=""></a>
             </div>
-            <div class="col-sd-12 col-md-5 col-lg-5">
+            <div class="col-sd-12 col-md-5 col-lg-5 order-1">
                 <nav>
                     <ul class="d-flex flex-row justify-content-around">
                         <li><a href="bags.html">Bags</a>
@@ -22,7 +22,7 @@
                     </ul>
                 </nav>
             </div>
-            <div class="col-sd-12 col-md-2 col-lg-2">
+            <div class="col-sd-12 col-md-2 col-lg-2 order-3">
                 <div>
                     <a href="">login | sign up <img src="./assets/login.png" alt=""></a>
                 </div>
@@ -35,92 +35,92 @@
         </div>
     </header>
 
-    <main class="container-fluid bg-secondary">
+    <main class="container-fluid bg-light">
             <div class="row">
-                <div class="col">
+                <div class="col-sd-12 col-md-6 col-lg-4">
                     <div>
-                        <img src="../assets/olivia.png" alt="">
+                        <img src="../assets/BTC.png" alt="">
                         <h4>OLIVIA</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
                         <button>-   1   +</button>
                     </div>
                     <div>
-                        <img src="../assets/magenta.png" alt="">
+                        <img src="../assets/ETH.png" alt="">
                         <h4>MAGENTA</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
                         <button>-   1   +</button>
                     </div>
                     <div>
-                        <img src="../assets/gabriela.png" alt="">
+                        <img src="../assets/BTC.png" alt="">
                         <h4>GABRIELA</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
                         <button>-   1   +</button>
                     </div>
                     <div>
-                        <img src="../assets/elena.png" alt="">
+                        <img src="../assets/ETH.png" alt="">
                         <h4>ELENA</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
                         <button>-   1   +</button>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-sd-12 col-md-6 col-lg-4">
                     <div>
-                        <img src="../assets/olivia.png" alt="">
+                        <img src="../assets/BTC.png" alt="">
                         <h4>OLIVIA</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
                         <button>-   1   +</button>
                     </div>
                     <div>
-                        <img src="../assets/magenta.png" alt="">
+                        <img src="../assets/ETH.png" alt="">
                         <h4>MAGENTA</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
                         <button>-   1   +</button>
                     </div>
                     <div>
-                        <img src="../assets/gabriela.png" alt="">
+                        <img src="../assets/BTC.png" alt="">
                         <h4>GABRIELA</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
                         <button>-   1   +</button>
                     </div>
                     <div>
-                        <img src="../assets/elena.png" alt="">
+                        <img src="../assets/ETH.png" alt="">
                         <h4>ELENA</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
                         <button>-   1   +</button>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-sd-12 col-md-6 col-lg-4">
                     <div>
-                        <img src="../assets/olivia.png" alt="">
+                        <img src="../assets/BTC.png" alt="">
                         <h4>OLIVIA</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
                         <button>-   1   +</button>
                     </div>
                     <div>
-                        <img src="../assets/magenta.png" alt="">
+                        <img src="../assets/ETH.png" alt="">
                         <h4>MAGENTA</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
                         <button>-   1   +</button>
                     </div>
                     <div>
-                        <img src="../assets/gabriela.png" alt="">
+                        <img src="../assets/BTC.png" alt="">
                         <h4>GABRIELA</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
                         <button>-   1   +</button>
                     </div>
                     <div>
-                        <img src="../assets/elena.png" alt="">
+                        <img src="../assets/ETH.png" alt="">
                         <h4>ELENA</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
