--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');</style>
+    <meta name="description" content="Mini bags, carteras y bolsos del mejor estilo y calidad. Envío gratis a todo el país y en ¡hasta 6 cuotas sin interés!">
+    <meta name="keywords" content="Serene, Serene bags, cartera cuero, cartera simil cuero, bolso de tela, cintos de cuero, carteras, minibags, bolsos, carteras para regalar, accesorios, billeteras de mujer, billeteras de hombre, billeteras, bags, estilo, elegante, cartera elegante">
+    <meta name="author" content="GPCcoder">
+    <meta name="copyright" content="Serene SA">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Serene">
+    <meta property="og:site_name" content="Serenee">
+    <meta property="og:url" content="https://chesanigianpaolo.github.io/PreEntrega2-ChesaniGianPaolo/">
+    <meta property="og:description" content="Carteras, bolsos, minibags y más">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fmodarelativa.com%2Fproductos%2Fcartera-mini-bag-importada-roma%2F&psig=AOvVaw2Nvy1n6wG95e0pCM5kPJf-&ust=1720039146746000&source=images&cd=vfe&opi=89978449&ved=2ahUKEwjSo4Ckm4mHAxUjppUCHT1vA0kQjRx6BAgAEBU">
+    <title>Serene - El verdadero estilo a tu alcance</title>
+    <link rel="shortcut icon" href="./assets/S.ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
+    <style>@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');</style>
 </head>
 <body>
     <!-- Los 5 HTML son: index, bags, accesorios, carrito, preguntas frecuentes -->
