--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Explora nuestra colección de accesorios complementarios para ti en nuestra tienda online. ¡Descubre más ahora!">
+    <meta name="keywords" content="Serene, Serene bags, cartera cuero, cartera simil cuero, bolso de tela, cintos de cuero, carteras, minibags, bolsos, carteras para regalar, accesorios, billeteras de mujer, billeteras de hombre, billeteras, bags, estilo, elegante, cartera elegante">
+    <meta name="author" content="GPCcoder">
+    <meta name="copyright" content="Serene SA">
+    <meta name="robots" content="no-index, follow">
+    <title>Accesorios - Comprá en 6 cuotas sin interés - Serene</title>
+    <link rel="shortcut icon" href="./assets/S.ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
