--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Conocé más sobre Serene, nuestra trayectoria y visión en el diseño y la moda de alto estilo">
+    <meta name="description" content="Serene, trayectoria, confianza, calidad, carteras">
+    <meta name="author" content="GPCcoder">
+    <meta name="copyright" content="Serene SA">
+    <meta name="robots" content="index, follow">
+    <title>Acerca de nosotros - Serene</title>
+    <link rel="shortcut icon" href="./assets/S.ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
