--- a/pages/últimoslanzamientos.html
+++ b/pages/últimoslanzamientos.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Accedé y aprovechá los últimos lanzamientos de Serene con descuentos inmediatos">
+    <meta name="author" content="GPCcoder">
+    <meta name="copyright" content="Serene SA">
+    <meta name="robots" content="index, follow">
+    <title>Últimos lanzamientos - enterate todas las novedades de temporada - Serene</title>
+    <link rel="shortcut icon" href="./assets/S.ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
