--- a/pages/billeteras.html
+++ b/pages/billeteras.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Explora nuestra colección de billeteras de cuero y otros materiales premium. Encuentra la billetera perfecta para ti con estilo y funcionalidad en nuestra tienda online. ¡Descubre más ahora!">
+    <meta name="keywords" content="Serene, Serene bags, cartera cuero, cartera simil cuero, bolso de tela, cintos de cuero, carteras, minibags, bolsos, carteras para regalar, accesorios, billeteras de mujer, billeteras de hombre, billeteras, bags, estilo, elegante, cartera elegante">
+    <meta name="author" content="GPCcoder">
+    <meta name="copyright" content="Serene SA">
+    <meta name="robots" content="no-index, follow">
+    <title>Billeteras - Comprá en 6 cuotas sin interés - Serene</title>
+    <link rel="shortcut icon" href="./assets/S.ico.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
