--- a/pages/política-de-privacidad.html
+++ b/pages/política-de-privacidad.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Conocé las políticas de privacidad de Serene">
+    <meta name="author" content="GPCcoder">
+    <meta name="copyright" content="Serene SA">
+    <meta name="robots" content="no-index, follow">
+    <title>Políticas de privacidad - Serene</title>
+    <link rel="shortcut icon" href="./assets/S.ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
