para 3ra entrega

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <meta property="og:url" content="https://chesanigianpaolo.github.io/PreEntrega2-ChesaniGianPaolo/">
     <meta property="og:description" content="Carteras, bolsos, minibags y más">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fmodarelativa.com%2Fproductos%2Fcartera-mini-bag-importada-roma%2F&psig=AOvVaw2Nvy1n6wG95e0pCM5kPJf-&ust=1720039146746000&source=images&cd=vfe&opi=89978449&ved=2ahUKEwjSo4Ckm4mHAxUjppUCHT1vA0kQjRx6BAgAEBU">
+    <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fmodarelativa.com%2Fproductos%2Fcartera-mini-bag-importada-roma%2F&psig=AOvVaw0RlzUQB2KmocFl2OYHm_1h&ust=1720039435173000&source=images&cd=vfe&opi=89978449&ved=2ahUKEwi7uMStnImHAxWPq5UCHZzMARIQjRx6BAgAEBU">
     <title>Serene - El verdadero estilo a tu alcance</title>
-    <link rel="shortcut icon" href="./assets/S.ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/S-ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
     <style>@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');</style>
 </head>
@@ -67,7 +67,7 @@
             <div class="productPic">
                 <div class="item1-prod">
                     <div>
-                        <img src="./assets/olivia.png" alt="">
+                        <img src="./assets/carteras1.jpg" alt="">
                     </div>
                     <div>
                         <h4>OLIVIA</h4>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="item2-prod">
                     <div>
-                        <img src="./assets/magenta.png" alt="">
+                        <img src="./assets/carteras2.jpg" alt="">
                     </div>
                     <div>
                         <h4>MAGENTA</h4>
@@ -89,7 +89,7 @@
                 </div>
                 <div class="item3-prod">
                     <div>
-                        <img src="./assets/gabriela.png" alt="">
+                        <img src="./assets/carteras3.jpg" alt="">
                     </div>
                     <div>
                         <h4>GABRIELA</h4>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="item4-prod">
                     <div>
-                        <img src="./assets/elena.png" alt="">
+                        <img src="./assets/carteras4.jpg" alt="">
                     </div>
                     <div>
                         <h4>ELENA</h4>
@@ -152,7 +152,7 @@
             <div class="productPic">
                 <div class="item1-prod">
                     <div>
-                        <img src="./assets/BTC.png" alt=""><h4>BTC</h4>
+                        <img src="./assets/billeteras1.jpg" alt="">
                     </div>
                     <div>
                         <h4>BTC</h4>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="item2-prod">
                     <div>
-                        <img src="./assets/ETH.png" alt="">
+                        <img src="./assets/billeteras2.jpg" alt="">
                     </div>
                     <div>
                         <h4>ETH</h4>
@@ -174,7 +174,7 @@
                 </div>
                 <div class="item3-prod">
                     <div>
-                        <img src="./assets/BTC.png" alt=""><h4>BTC</h4>
+                        <img src="./assets/billeteras3.jpg" alt="">
                     </div>
                     <div>
                         <h4>BTC</h4>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="item4-prod">
                     <div>
-                        <img src="./assets/ETH.png" alt="">
+                        <img src="./assets/billeteras4.jpg" alt="">
                     </div>
                     <div>
                         <h4>ETH</h4>
@@ -210,10 +210,10 @@
             <div class="productPic">
                 <div class="item1-prod">
                     <div>
-                        <img src="./assets/belt.png" alt="">
+                        <img src="./assets/accesorios1.jpg" alt="">
                     </div>
                     <div>
-                        <h4>BELT</h4>
+                        <h4>NECKLACE</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
                         <a href="">comprar</a>
@@ -221,7 +221,7 @@
                 </div>
                 <div class="item2-prod">
                     <div>
-                        <img src="./assets/ring.png" alt="">
+                        <img src="./assets/accesorios2.jpg" alt="">
                     </div>
                     <div>
                         <h4>RING</h4>
@@ -232,10 +232,10 @@
                 </div>
                 <div class="item3-prod">
                     <div>
-                        <img src="./assets/belt.png" alt="">
+                        <img src="./assets/accesorios3.jpg" alt="">
                     </div>
                     <div>
-                        <h4>BELT</h4>
+                        <h4>NECKLACE</h4>
                         <p>-$32.000-</p>
                         <p2>$28.000</p>
                         <a href="">comprar</a>
@@ -243,7 +243,7 @@
                 </div>
                 <div class="item4-prod">
                     <div>
-                        <img src="./assets/ring.png" alt="">
+                        <img src="./assets/accesorios4.jpg" alt="">
                     </div>
                     <div>
                         <h4>RING</h4>
