--- a/pages/bags.html
+++ b/pages/bags.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Serene SA">
     <meta name="robots" content="index, follow">
     <title>Carteras - Comprá en 6 cuotas sin interés - Serene</title>
-    <link rel="shortcut icon" href="./assets/S.ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/S-ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
