--- a/pages/billeteras.html
+++ b/pages/billeteras.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Serene SA">
     <meta name="robots" content="no-index, follow">
     <title>Billeteras - Comprá en 6 cuotas sin interés - Serene</title>
-    <link rel="shortcut icon" href="./assets/S.ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/S-ico.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
