--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -8,7 +8,7 @@
     <meta name="copyright" content="Serene SA">
     <meta name="robots" content="no-index, follow">
     <title>Carrito de compras - Envío gratis a domicilio - Serene</title>
-    <link rel="shortcut icon" href="./assets/S.ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/S-ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
