--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -9,7 +9,7 @@
     <meta name="copyright" content="Serene SA">
     <meta name="robots" content="index, follow">
     <title>Acerca de nosotros - Serene</title>
-    <link rel="shortcut icon" href="./assets/S.ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/S-ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
