--- a/pages/últimoslanzamientos.html
+++ b/pages/últimoslanzamientos.html
@@ -8,7 +8,7 @@
     <meta name="copyright" content="Serene SA">
     <meta name="robots" content="index, follow">
     <title>Últimos lanzamientos - enterate todas las novedades de temporada - Serene</title>
-    <link rel="shortcut icon" href="./assets/S.ico.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/S-ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
